[package]
name = "fetch_vless_address_and_port_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
regex = "1.10.2"

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]